# xxos

./: Cargo.toml  LICENSE  README.md  makefile  rust-toolchain.toml
config/src/: lib.rs
doc/: log.md  多核启动.md  统一调度器设计文档以及实施方案.md  设计文档.md  进程、线程、协程调度.md
fast-trap/src/: context.rs  fast.rs  lib.rs  stack.rs
fast-trap/src/hal/: mod.rs  riscv.rs
kernel/: Cargo.toml
kernel-context/src/: lib.rs
kernel-vm/src/: lib.rs
kernel-vm/src/space/: mod.rs
kernel/src/: config.rs  console.rs  consoleimpl.rs  heap_alloc.rs  main.rs  processor.rs  processorimpl.rs  syscall.rs  syscallimpl.rs  trap.rs  trapstack.rs
kernel/src/drivers/: mod.rs  virtio_block.rs
kernel/src/fsimpl/: fsimpl.rs  mod.rs
kernel/src/mm/: heap.rs  kernel_space.rs  mod.rs  pagemanage.rs
kernel/src/mmimpl/: addr_space.rs  kernel_heap.rs  kernel_space.rs  mod.rs  page_manager.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs
kernel/src/syscallimpl/: clock.rs  io.rs  mod.rs  process.rs  schedule.rs
kernel/src/task/: executor.rs  id.rs  mod.rs  process.rs  thread.rs
linker/src/: lib.rs
printlib/: Cargo.toml  README.md
printlib/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: config.rs  coroutine.rs  executor.rs  lib.rs  task_waker.rs
syscall/: Cargo.toml
syscall/src/: kernel.rs  lib.rs  user.rs
syscall/src/kernel/: mod.rs
syscall/syscall_macro/: Cargo.toml
syscall/syscall_macro/src/: lib.rs  syscall.rs
task/: Cargo.toml
task-manage/: Cargo.toml
task-manage/src/: lib.rs  processor.rs  scheduler.rs  task.rs
task/src/: id.rs  lib.rs  process.rs
testproc/: Cargo.toml
testproc/src/: main.rs
unfi-sche/: Cargo.toml  build.rs
unfi-sche/src/: executor.rs  heap.rs  interface.rs  main.rs  thread.rs
up/: Cargo.toml
up/src/: lib.rs
user/: Cargo.toml  build.rs  cases.toml
user/src/: heap.rs  lib.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
vdso/: Cargo.toml
vdso/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: address.rs  frame_allocator.rs  heap_allocator.rs  lib.rs  memory_set.rs
xtask/: Cargo.toml
xtask/src/: main.rs  module.rs  user.rs
