[workspace]
members = [
    "xtask",
    "kernel",
    "printlib",
    "task-manage",
    "kernel-context",
    "kernel-vm",
    "user",
    "syscall",
    "utils",
    "linker",
    "unfi-sche",
    "runtime",
    "fast-trap"
]
default-members = ["xtask"]

[profile.release]
opt-level = "s"
debug = true
