[package]
name = "kernel"
version = "0.0.1"
edition = "2021"
authors = ["zflcs <1491657576@qq.com>"]


[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.10.0"
spin = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
rcore-console = "0.0.0"

linker = { path = "../linker" }
config = { path = "../config"}
fast-trap = { path = "../fast-trap"}
vmm = { path = "../vmm"}

[build-dependencies]
linker = { path = "../linker" }
