[package]
name = "unfi-sche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printlib ={ path = "../printlib"}
customizable-buddy = "0.0.2"
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
riscv = "0.8.0"
syscall = { path = "../syscall", features = ["user"] }
kernel-context ={ path = "../kernel-context"}
runtime ={ path = "../runtime"}
