[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
riscv = "0.10.0"
buddy_system_allocator = "0.6.0"
rcore-console = "0.0.0"
xmas-elf = "0.9.0"
log = "0.4.17"


config = { path = "../config"}
linker = { path = "../linker"}